ATS/main/default/objects/Resource__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <label>Primary Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>