ATS/main/default/objects/Resource__c/fields/Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Source_Details__c</fullName>
    <label>Source Details</label>
    <type>TextArea</type>
</CustomField>