ATS/main/default/objects/Resource__c/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Green Card Holder</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>H1B</fullName>
            </value>
            <value>
                <fullName>T1</fullName>
            </value>
            <value>
                <fullName>H4AD</fullName>
            </value>
            <value>
                <fullName>GCAD</fullName>
            </value>
            <value>
                <fullName>GC EAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>