ATS/main/default/objects/Resource__c/validationRules/Source_Detail_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_Detail_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
 ISPICKVAL( Source__c , &apos;Friend Referral&apos;) ,
ISPICKVAL( Source__c , &apos;Employee Referral&apos;) ,
ISPICKVAL( Source__c , &apos;Other&apos;)) ,
  ISBLANK( Source_Details__c ) )</errorConditionFormula>
    <errorDisplayField>Source_Details__c</errorDisplayField>
    <errorMessage>Source Details should not be blank</errorMessage>
</ValidationRule>