ATS/main/default/objects/Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Primary_Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Total_Years_of_Experience__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>